force-app/main/default/objects/Opportunity/fields/Fields_Locked__c.field-meta.xml
<CustomField>
    <fullName>Fields_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fields_Locked</label>
    <type>Checkbox</type>
</CustomField>