force-app/main/default/objects/Opportunity/fields/Follow_Up_Budget__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Budget__c</fullName>
    <label>Follow_Up_Budget</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>