force-app/main/default/objects/Opportunity/fields/Has_Recent_Activity__c.field-meta.xml
<CustomField>
    <fullName>Has_Recent_Activity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Recent Activity</label>
    <type>Checkbox</type>
</CustomField>