force-app/main/default/objects/Opportunity/fields/Last_Activity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Activity Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>