force-app/main/default/objects/Opportunity/fields/Last_Qualified_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Qualified_Activity_Date__c</fullName>
    <label>Last Qualified Activity Date</label>
    <type>DateTime</type>
</CustomField>