force-app/main/default/objects/Opportunity/fields/Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Risk_Level__c</fullName>
    <inlineHelpText>Risk level of an opportunity</inlineHelpText>
    <label>Risk_Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low Value – Routine Deal</fullName>
                <default>true</default>
                <label>Low Value – Routine Deal</label>
            </value>
            <value>
                <fullName>Medium Value – Follow-Up Required</fullName>
            </value>
            <value>
                <fullName>High Value – Time Sensitive</fullName>
            </value>
            <value>
                <fullName>High Value – Executive Attention</fullName>
            </value>
            <value>
                <fullName>Strategic Deal – High Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>