force-app/main/default/objects/Opportunity/validationRules/Block_Follow_Up_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Follow_Up_Date</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(ISBLANK(Follow_Up_Date__c))</errorConditionFormula>
    <errorDisplayField>Follow_Up_Date__c</errorDisplayField>
    <errorMessage>Follow Up Date cannot be updated by automation.</errorMessage>
</ValidationRule>