force-app/main/default/objects/Opportunity/validationRules/Lock_Amount_When_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Amount_When_Approved</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    Fields_Locked__c = TRUE,
    ISCHANGED(Amount),
    ISCHANGED(StageName)
)</errorConditionFormula>
    <errorDisplayField>Amount</errorDisplayField>
    <errorMessage>This field is locked while the Opportunity is under approval.</errorMessage>
</ValidationRule>